updated footer, removed heiden associations, fixed mobile photo distortion

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -322,7 +322,6 @@ a {
 }
 .fll-wrapper {
   padding-right: 2.5%;
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -434,7 +433,6 @@ a {
   #footer-links p {
     font-size: 0.8rem;
     padding: 0 0.5rem;
-    width: 80%;
   }
   #post-wrapper {
     margin: 1rem 0;
@@ -470,6 +468,7 @@ a {
 .logo-links.ytlogo {
   display: flex;
   align-items: center;
+  padding-bottom: 10px;
 }
 .logo-links.ytlogo img {
   max-height: 30px;
@@ -568,6 +567,15 @@ a {
 }
 #testimonial-form h1 {
   padding: 1rem 1rem;
+}
+@media screen and (max-width: 767px) {
+  .post-wrapper {
+    flex-direction: column;
+  }
+  .post-thumbnail {
+    width: 50%;
+    padding: 0.5rem 0;
+  }
 }
 @media screen and (min-width: 768px) {
   #testimonial-form form {
@@ -823,7 +831,7 @@ a {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-content: center;
 }
 #footer-copyright {
@@ -905,10 +913,9 @@ a {
     max-height: 20px;
   }
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 600px) {
   .fll-wrapper {
     padding-right: 2.5%;
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -919,7 +926,7 @@ a {
     display: flex;
     flex-direction: row;
     flex-grow: 1;
-    justify-content: center;
+    justify-content: space-between;
   }
   .logo-links img {
     height: 57px;
@@ -1023,6 +1030,11 @@ a {
   #post-wrapper {
     padding: 2% 15%;
   }
+  .logo-links.ytlogo {
+    display: flex;
+    align-items: center;
+    padding-bottom: 0px;
+  }
 }
 @media screen and (min-width: 1400px) {
   #header {
@@ -1038,5 +1050,10 @@ a {
   .fll-wrapper {
     padding-left: 0;
     padding-right: 0;
+  }
+  .logo-links.ytlogo {
+    display: flex;
+    align-items: center;
+    padding-bottom: 0px;
   }
 }
